# seagul

./: CHANGELOG.md  Cargo.toml  README.md
src/: main.rs  prelude.rs
src/subcommands/: builder.rs  decode.rs  encode.rs  mod.rs
