[package]
name = "seagul"
version = "0.1.0"
authors = ["Andrea Coronese <sixpounder@protonmail.com>"]
edition = "2018"
description = "A CLI utility to encode (and decode) arbitrary information into images"
readme = "README.md"
homepage = "https://github.com/sixpounder/seagul"
repository = "https://github.com/sixpounder/seagul"
license = "GPL-2.0"
categories = ["Command line utilities"]
keywords = [
    "image",
    "steganography",
    "encoding"
]

[dependencies]
clap = "2.33.3"
lazy_static = "1.4.0"
colored = "2.0.0"
seagul_core = "0.1.0"

[[bin]]
name = "seagul"
test = false
bench = false
